--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "commonjs",
   "scripts": {
    "start": "node App.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npm install --prefix  ./Views && npm run build --prefix ./Views && npm install"
   },
   "keywords": [],
   "author": "",
